changed text in html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="to-do-list-container">
             <h2>To-Do List <img src="images/icon.png"></h2>
                 <div class="box">
-                    <input type="text" id="input-box" placeholder="input task" >
-                    <button onclick="addTask()">Add Task</button>
+                    <input type="text" id="input-box" placeholder="enter task" >
+                    <button onclick="addTask()">add task</button>
                 </div>
                 <ul id="list">
                     <li class="completed-task">task 1</li>
